--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_URL=mongodb+srv://sravan:Testing123@cluster0.kz0elif.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://sravan:Testing123@cluster0.kz0elif.mongodb.net/test?retryWrites=true&w=majority
 
 
 NODE_ENV=production
